; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/gssapi/krb5/extr_sequence.c_elem_set.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/gssapi/krb5/extr_sequence.c_elem_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gss_msg_order = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gss_msg_order*, i32, i32)* @elem_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @elem_set(%struct.gss_msg_order* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.gss_msg_order*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.gss_msg_order* %0, %struct.gss_msg_order** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.gss_msg_order*, %struct.gss_msg_order** %4, align 8
  %9 = getelementptr inbounds %struct.gss_msg_order, %struct.gss_msg_order* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.gss_msg_order*, %struct.gss_msg_order** %4, align 8
  %13 = getelementptr inbounds %struct.gss_msg_order, %struct.gss_msg_order* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = urem i32 %11, %14
  %16 = zext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %10, i64 %16
  store i32 %7, i32* %17, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
